# object-tracking-cli

./: .gitignore  .pre-commit-config.yaml  README.md  profile_trackers.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
object_tracking_cli/: cli.py  cli_stdin.py  plotting.py  processing.py  video_streaming.py
object_tracking_cli/configs/: default_config.yaml
object_tracking_cli/object_detection/: detection.py
object_tracking_cli/object_tracking/: assignment.py  base_tracker.py  cost_matrix.py  distance_utils.py  mot.py  motion_model.py  trackers.py
object_tracking_cli/object_tracking/utils/: bbox.py  costs.py  distance_utils.py
object_tracking_cli/utils/: image_utils.py
tests/: setup.py  test_assignments.py  test_object_tracking.py  test_video_streaming.py
